fixed swiper bug

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <header>
             <h2 class="title">Depoimentos de quem já passou por aqui</h2>
           </header>
-          <div class="testimonials swiper swiper-container">
+          <div class="testimonials swiper">
             <div class="swiper-wrapper">
               <div class="testimonial swiper-slide">
                 <blockquote>
